[package]
name = "arx_test_dir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
lipsum = "0.9.0"
rand = { version= "0.8.5", features = ["small_rng"] }
